# sent

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yml  sqlx-data.json
configuration/: base.yaml
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: email.rs  mod.rs  name.rs
src/routes/: health.rs  mod.rs  subscription.rs
tests/: README.md  health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription.rs
